--- a/css/_banner.scss
+++ b/css/_banner.scss
@@ -1,110 +1,262 @@
 .banner{
-    height: 100vh;
+    height: 90vh;@include center;background-image: linear-gradient( #040221,#0E0C38 );
     .container{
-        .row{
-
-            .col-md-2{
-                .name{
-                    h2{
-                        color: white;font-size: 30px;padding-top: 90px;text-transform: capitalize;line-height: 1;font-family: 'semi';
-                    }
-                    .icons{
-                        display: flex;flex-wrap: wrap;padding-top: 20px;
-                        a{
-                            font-size: 25px;font-family: 'light';text-decoration: none;padding-right: 20px;color: rgb(225, 255, 0);
-                        }
-                    }
+        display: flex;justify-content: center;flex-wrap: wrap;
+        // NAME
+        .name{
+            width: 40%;padding-top: 100px;
+            p{
+                font-size: 20px;font-family: 'light';text-transform: uppercase;
+            }
+            h2{
+                font-size: 40px;font-family: 'semi';text-transform: capitalize;
+                span{display: block;padding-left: 10px;}
+            }
+            h1{
+                font-size: 20px;text-transform: capitalize;padding: 35px 0 35px 0;font-family: 'light';
+                strong{
+                    font-size: 50px;display: block;font-family: 'bold';
                 }
             }
-
-            .col-md-4{
-                .image{
-                    width: 100%;height: 400px;margin-top: 30px;
-                    img{
-                        width: 100%;height: 100%;object-fit: cover;
-                    }
-                }
+            button{
+                @include btn;
             }
-            .col-md-6{
-                .info{
-                    h1{
-                        font-size: 30px;font-weight: bolder;padding-top: 50px;font-family: 'bold';text-shadow: 1px 2px 5px rgb(118, 117, 117);
-                        span{display: block;}
-                        strong{font-weight: lighter;}
-                    }
-                    p{
-                        font-size: 25px;padding-top: 20px;font-family: 'light';
-                        span{display: block;}
-                        #zim{font-family: 'semi';}
-                    }
-                    button{
-                        width: 200px;height: 40px;margin-top: 30px;text-transform: uppercase;font-size: 20px;@include center;font-family: 'bold';
-                        border-radius: 60px 0 120px 60px;border: none;margin-bottom: 20px;
-                    }
-                }
-            }
+         
+        }
+        // IMAGE
+        .image{
+            width: 40%;
+         
+        }
 
+        // FOLLOW
+        .follow{
+            width: 20%;height: 60vh;display: flex;flex-direction: column;justify-content: center; box-shadow: 0px 1px 21px 5px rgba(255, 255, 255, 0.124);
+            padding: 30px 0 30px  40px ;border-radius:  0px 100px 0px 100px;background-color: #040221;margin-top: 40px;
+            h4{
+                font-size: 20px;text-transform: capitalize;font-family: 'bold';padding-bottom: 40px;writing-mode: vertical-lr;text-orientation: upright;
+                
+            }
+            a{
+                color: white;text-decoration: none;font-family: 'light';padding-bottom: 15px;font-size: 25px;text-transform: capitalize;
+                &:hover{
+                    text-decoration: underline;font-family: 'semi';
+                }
+                i{margin-right: 15px;}
+            }
         }
     }
 }
 
 
 
+// I PAD
 
-
-@media screen and (min-width: 768px){
-
+@media screen and(max-width:768px) {
     .banner{
-    height: 100vh;
-    .container{
-        .row{
-
-            .col-md-2{
-                .name{
-                    h2{
-                        color: white;font-size: 50px;padding-top: 200px;text-transform: capitalize;line-height: 1;font-family: 'semi';
-                    }
-                    .icons{
-                        display: flex;flex-wrap: wrap;padding-top: 20px;
-                        a{
-                            font-size: 25px;font-family: 'light';text-decoration: none;padding-right: 20px;color: rgb(225, 255, 0);
-                        }
+        height: 80vh;
+        .container{
+        
+            // NAME
+            .name{
+                width: 50%;padding-top: 0%;
+                p{
+                    font-size: 20px;
+                }
+                h2{
+                    font-size: 35px;
+                }
+                h1{
+                    font-size: 20px;
+                    strong{
+                        font-size: 40px;
                     }
                 }
+                           
             }
-
-            .col-md-4{
-                .image{
-                    width: 480px;height: 500px;margin-top: 150px;padding-left: 150px;
-                    img{
-                        width: 100%;height: 100%;object-fit: cover;
-                    }
+            // IMAGE
+            .image{
+                width: 50%;
+             
+            }
+    
+            // FOLLOW
+            .follow{
+                width: 100%;height: 20vh;display: flex;flex-direction: row;flex-wrap: wrap;;
+                padding:30px 0 0 20px ;border-radius: 20px 20px 20px 20px ;margin-top: 20px;
+                h4{
+                   width: 100% ;font-size: 25px;padding-bottom: 0px;writing-mode: horizontal-tb;
+                }
+                a{
+                    padding: 15px;font-size: 35px;
                 }
             }
-            .col-md-6{
-                .info{
-                    padding-left: 190px;
-                    h1{
-                        font-size: 40px;font-weight: bolder;padding-top: 120px;font-family: 'bold';text-shadow: 1px 2px 5px rgb(118, 117, 117);
-                        span{display: block;}
-                        strong{font-weight: lighter;}
-                    }
-                    p{
-                        font-size: 35px;padding-top: 20px;font-family: 'light';
-                        span{display: block;}
-                        #zim{font-family: 'semi';}
-                    }
-                    button{
-                        width: 300px;height: 60px;margin-top: 30px;text-transform: uppercase;;font-size: 30px;@include center;font-family: 'bold';
-                        border-radius: 60px 0 120px 60px;border: none;
-                    }
-                }
-            }
-
         }
     }
+    
+    
 }
 
 
+// PHONE  LANDSCAPE
 
+@media screen and(max-width:568px) {
+    .nav{visibility: hidden;}
+    .banner{
+        height: 115vh;
+        .container{
+        text-align: center;
+            // NAME
+            .name{
+                width: 100%;padding-top: 0px;
+                p{
+                    font-size: 18px;
+                }
+                h2{
+                    font-size: 35px;
+                }
+                h1{
+                    font-size: 18px;padding: 0 0 10px 0;
+                    strong{
+                        font-size: 30px;
+                    }
+                }
+                           
+            }
+            // IMAGE
+            .image{
+                width: 50%;
+             
+            }
+    
+            // FOLLOW
+            .follow{
+                height: 25vh;
+                padding:16px 0 0 20px ;margin-top: 15px;
+                h4{
+                   font-size: 20px;
+                }
+                a{
+                    padding: 15px;font-size: 18px;
+                }
+            }
+        }
+    }
+    
+    
 }
+@media only screen and(min-width:320px) and(max-width:568px) and(orientation:landscape) {
+    .banner{
+        height: 140vh;color: pink;
+        .container{
+        
+            // NAME
+            .name{
+                width: 50%;padding-top: 20px;
+                p{
+                    font-size: 18px;
+                }
+                h2{
+                    font-size: 35px;
+                }
+                h1{
+                    font-size: 18px;padding: 0 0 10px 0;
+                    strong{
+                        font-size: 30px;
+                    }
+                }
+                           
+            }
+            // IMAGE
+            .image{
+                width: 50%;
+             
+            }
+    
+            // FOLLOW
+            .follow{
+                height: 30vh;
+                padding:16px 0 0 20px ;margin-top: 15px;text-align: left;
+                h4{
+                   font-size: 20px;
+                }
+                a{
+                    padding: 15px;font-size: 18px;
+                }
+            }
+        }
+    }
+    
+    
+}
+
+// PHONE 6/7/8 PLUS
+@media screen and(max-width:375px) {
+    .nav{visibility: hidden;}
+      .banner{
+          height: 125vh;padding-top: 0px;color: green;
+          .container{
+          
+              // NAME
+              .name{
+                  width: 100%;padding-top: 20px;text-align: center;
+                  p{
+                      font-size: 18px;
+                  }
+                  h2{
+                      font-size: 35px;
+                  }
+                  h1{
+                      font-size: 18px;padding: 0 0 10px 0;
+                      strong{
+                          font-size: 30px;
+                      }
+                  }
+                             
+              }
+              // IMAGE
+              .image{
+                  width: 50%;
+               
+              }
+      
+              // FOLLOW
+              .follow{
+                  height: 30vh;
+                  padding:16px 0 0 20px ;margin-top: 20px;border-radius: 20px 20px 20px 20px;padding-bottom: 40px;
+                  h4{
+                     font-size: 20px;
+                  }
+                  a{
+                      padding: 10px;font-size: 18px;width: 120px;text-align: left;
+                      i{margin-right: 10px;}
+                  }
+              }
+          }
+      }
+      
+      
+  }
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
