--- a/css/_banner.scss
+++ b/css/_banner.scss
@@ -25,13 +25,15 @@
         }
         // IMAGE
         .image{
-            width: 40%;
-         
+            width: 38%;position: relative;;
+         .overlay{
+            position: absolute;top: 0;left: 0;background-image: linear-gradient( #040221,#0E0C38 );width: 100%;height: 100%;opacity: .5;;
+         }
         }
 
         // FOLLOW
         .follow{
-            width: 20%;height: 60vh;display: flex;flex-direction: column;justify-content: center; box-shadow: 0px 1px 21px 5px rgba(255, 255, 255, 0.124);
+            width: 20%;height: 60vh;display: flex;flex-direction: column;justify-content: center; box-shadow: -5px 0px 22px -2px rgb(255 255 255 / 12%);margin-left: 2px;
             padding: 30px 0 30px  40px ;border-radius:  0px 100px 0px 100px;background-color: #040221;margin-top: 40px;
             h4{
                 font-size: 20px;text-transform: capitalize;font-family: 'bold';padding-bottom: 40px;writing-mode: vertical-lr;text-orientation: upright;
