--- a/css/_reset&mixin.scss
+++ b/css/_reset&mixin.scss
@@ -61,7 +61,7 @@ table {
 
 @mixin btn {
 	width: 150px;font-size: 25px;text-transform: uppercase;border-radius: 40px 0 40px 0px;font-family: 'bold';
-	outline: none;border: none;color: #0E0C38;
+	outline: none;border: none;color: #ffffff;background-color: #FF0513;
 	&:hover{
 		background-color: #0E0C38;color: #fff;border: 2px solid #fff;outline: none;box-shadow: 2px 4px 5px #fff;
 	}
