--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,8 @@ table {
   border-spacing: 0;
 }
 
-@font-face {
-  font-family: bold;
+/* @font-face {
+  none: bold;
   src: url(/fonts/Akrobat-ExtraBold.ttf);
 }
 @font-face {
@@ -66,7 +66,7 @@ table {
 @font-face {
   font-family: semi;
   src: url(/fonts/Akrobat-SemiBold.ttf);
-}
+} */
 header {
   height: 10vh;
   display: flex;
@@ -92,31 +92,15 @@ header ul li a {
   text-decoration: none;
   font-family: "semi";
   transition: 0.5s ease-in;
+  transition: 0.5s;
 }
 header ul li a:hover {
-  color: #fff;
+  color: #ffffff;
   text-decoration: underline;
-  -webkit-text-decoration-color: #261ebe;
-          text-decoration-color: #261ebe;
+  -webkit-text-decoration-color: #FF0513;
+          text-decoration-color: #FF0513;
   -webkit-text-decoration-style: wavy;
           text-decoration-style: wavy;
-}
-header ul button {
-  width: 150px;
-  font-size: 25px;
-  text-transform: uppercase;
-  border-radius: 40px 0 40px 0px;
-  font-family: "bold";
-  outline: none;
-  border: none;
-  color: #0E0C38;
-}
-header ul button:hover {
-  background-color: #0E0C38;
-  color: #fff;
-  border: 2px solid #fff;
-  outline: none;
-  box-shadow: 2px 4px 5px #fff;
 }
 
 #menu--toggle[type=checkbox]:not(:checked),
@@ -133,7 +117,7 @@ header ul button:hover {
   right: 1.6em;
   width: 2em;
   height: 5px;
-  background-color: #282828;
+  background-color: #ffffff;
   border-radius: 2px;
   cursor: pointer;
   z-index: 100;
@@ -164,57 +148,67 @@ header ul button:hover {
   height: 7em;
   margin: 0;
   padding: 0;
-  background-color: #fcfcfc;
+  background: #FF0513;
+  background-image: linear-gradient(45deg, #FF0513, #0E0C38);
   border-bottom-left-radius: 100%;
-  box-shadow: 3px 3px 7px rgba(40, 40, 40, 0.2);
+  box-shadow: 3px 3px 7px rgba(255, 255, 255, 0.2);
   z-index: 10;
+  padding-top: 70PX;
+}
+.menu__body li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+.menu__body button {
+  width: 150px;
+  font-size: 25px;
+  text-transform: uppercase;
+  border-radius: 40px 0 40px 0px;
+  font-family: "bold";
+  outline: none;
+  border: none;
+  color: #ffffff;
+  background-color: #FF0513;
+  margin: 0 auto;
+  background-color: #0E0C38;
+  padding: 5px 0 5px 0;
+}
+.menu__body button:hover {
+  background-color: #0E0C38;
+  color: #fff;
+  border: 2px solid #fff;
+  outline: none;
+  box-shadow: 2px 4px 5px #fff;
 }
 
-.menu__body-element,
 .menu__body-link {
   display: none;
-  margin: 4.4em 0 -3.3em -0.1em;
-  font-weight: normal;
-  color: #282828;
+  color: #fff;
   text-decoration: none;
-  text-transform: none;
+  text-transform: capitalize;
   list-style: none;
   outline: 0;
-}
-
-.menu__body-element {
-  text-indent: 2em;
-}
-
-.menu__body-link:hover {
-  display: block;
-  width: 0;
-  color: #282828;
-  background-color: #e2e2e2;
-  -webkit-animation: changeWidthOfElementAnimation 0.35s both;
-          animation: changeWidthOfElementAnimation 0.35s both;
 }
 
 #menu--toggle:checked + .menu--toggle__trigger + .menu--toggle__burger {
   top: 35px;
   transform: rotate(405deg);
-  transition: transform 0.35s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 #menu--toggle:checked + .menu--toggle__trigger + .menu--toggle__burger:before {
   top: 0;
   transform: rotate(-90deg);
-  transition: transform 0.35s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 #menu--toggle:checked + .menu--toggle__trigger + .menu--toggle__burger:after {
   top: 0;
   transform: rotate(90deg);
-  transition: transform 0.35s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 #menu--toggle:checked + .menu--toggle__trigger + .menu--toggle__burger + .menu__body {
   -webkit-animation: checkboxCheckedAnimation 1s cubic-bezier(0.25, 0.1, 0.25, 1) both;
           animation: checkboxCheckedAnimation 1s cubic-bezier(0.25, 0.1, 0.25, 1) both;
 }
-#menu--toggle:checked + .menu--toggle__trigger ~ .menu__body .menu__body-element, #menu--toggle:checked + .menu--toggle__trigger ~ .menu__body .menu__body-link {
+#menu--toggle:checked + .menu--toggle__trigger ~ .menu__body .menu__body-link {
   display: block;
 }
 
@@ -239,34 +233,6 @@ header ul button:hover {
     width: 100vw;
     height: 100vh;
     border-radius: 0;
-  }
-}
-@-webkit-keyframes checkboxUncheckedAnimation {
-  0% {
-    width: 100vw;
-    height: 100vh;
-  }
-}
-@keyframes checkboxUncheckedAnimation {
-  0% {
-    width: 100vw;
-    height: 100vh;
-  }
-}
-@-webkit-keyframes changeWidthOfElementAnimation {
-  50% {
-    width: 0;
-  }
-  100% {
-    width: 100%;
-  }
-}
-@keyframes changeWidthOfElementAnimation {
-  50% {
-    width: 0;
-  }
-  100% {
-    width: 100%;
   }
 }
 .banner {
@@ -318,7 +284,8 @@ header ul button:hover {
   font-family: "bold";
   outline: none;
   border: none;
-  color: #0E0C38;
+  color: #ffffff;
+  background-color: #FF0513;
 }
 .banner .container .name button:hover {
   background-color: #0E0C38;
@@ -328,7 +295,17 @@ header ul button:hover {
   box-shadow: 2px 4px 5px #fff;
 }
 .banner .container .image {
-  width: 40%;
+  width: 38%;
+  position: relative;
+}
+.banner .container .image .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(#040221, #0E0C38);
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
 }
 .banner .container .follow {
   width: 20%;
@@ -336,7 +313,8 @@ header ul button:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  box-shadow: 0px 1px 21px 5px rgba(255, 255, 255, 0.124);
+  box-shadow: -5px 0px 22px -2px rgba(255, 255, 255, 0.12);
+  margin-left: 2px;
   padding: 30px 0 30px 40px;
   border-radius: 0px 100px 0px 100px;
   background-color: #040221;
@@ -545,4 +523,85 @@ header ul button:hover {
   .banner .container .follow a i {
     margin-right: 10px;
   }
+}
+.about h2 {
+  font-family: "semi";
+  font-size: 40px;
+  padding: 50px;
+  text-align: center;
+  position: relative;
+}
+.about h2 span {
+  font-size: 130px;
+  font-weight: bolder;
+  font-family: "bold";
+  text-transform: uppercase;
+  position: absolute;
+  z-index: -2;
+  color: #0e0c388e;
+  left: 0;
+  right: 0;
+  top: 0px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.about h2 #about {
+  background-color: #FF0513;
+  height: 2px;
+  border: none;
+  width: 20%;
+  margin: 0 auto;
+}
+.about .container {
+  display: flex;
+  justify-content: space-between;
+}
+.about .container .pic {
+  width: 35%;
+  padding: 30px;
+  border: 10px double red;
+  transform: rotate(40deg);
+  margin-left: 30px;
+}
+.about .container .pic img {
+  transform: rotate(-40deg);
+  height: 500px;
+}
+.about .container .personal-info {
+  width: 50%;
+}
+.about .container .personal-info p {
+  font-family: "light";
+  font-size: 25px;
+  padding-bottom: 40px;
+}
+.about .container .personal-info .social a {
+  font-size: 20px;
+  font-family: "light";
+  padding: 20px;
+  text-transform: capitalize;
+  color: #fff;
+}
+
+.skill-experience h2 {
+  font-family: "semi";
+  font-size: 40px;
+  text-align: center;
+  position: relative;
+  text-transform: capitalize;
+  padding-top: 75px;
+}
+.skill-experience h2 span {
+  font-size: 80px;
+  font-weight: bolder;
+  font-family: "bold";
+  text-transform: uppercase;
+  position: absolute;
+  z-index: -2;
+  color: #0e0c388e;
+  left: 0;
+  right: 0;
+  top: 50px;
+  margin-left: auto;
+  margin-right: auto;
 }/*# sourceMappingURL=style.css.map */
