--- a/css/_banner.scss
+++ b/css/_banner.scss
@@ -33,7 +33,7 @@
 
         // FOLLOW
         .follow{
-            width: 20%;height: 60vh;display: flex;flex-direction: column;justify-content: center; box-shadow: -5px 0px 22px -2px rgb(255 255 255 / 12%);margin-left: 2px;
+            width: 20%;height: 60vh;display: flex;flex-direction: column;justify-content: center; box-shadow: 12px 12px rgb(255 255 255 / 12%);margin-left: 2px;
             padding: 30px 0 30px  40px ;border-radius:  0px 100px 0px 100px;background-color: #040221;margin-top: 40px;
             h4{
                 font-size: 20px;text-transform: capitalize;font-family: 'bold';padding-bottom: 40px;writing-mode: vertical-lr;text-orientation: upright;
