--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,8 @@ table {
   border-spacing: 0;
 }
 
-/* @font-face {
-  none: bold;
+@font-face {
+  font-family: bold;
   src: url(/fonts/Akrobat-ExtraBold.ttf);
 }
 @font-face {
@@ -66,7 +66,7 @@ table {
 @font-face {
   font-family: semi;
   src: url(/fonts/Akrobat-SemiBold.ttf);
-} */
+}
 header {
   height: 10vh;
   display: flex;
@@ -313,7 +313,7 @@ header ul li a:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  box-shadow: -5px 0px 22px -2px rgba(255, 255, 255, 0.12);
+  box-shadow: 12px 12px rgba(255, 255, 255, 0.12);
   margin-left: 2px;
   padding: 30px 0 30px 40px;
   border-radius: 0px 100px 0px 100px;
@@ -524,6 +524,9 @@ header ul li a:hover {
     margin-right: 10px;
   }
 }
+.about {
+  padding-bottom: 50px;
+}
 .about h2 {
   font-family: "semi";
   font-size: 40px;
@@ -557,15 +560,23 @@ header ul li a:hover {
   justify-content: space-between;
 }
 .about .container .pic {
-  width: 35%;
+  width: 400px;
+  height: 400px;
   padding: 30px;
   border: 10px double red;
-  transform: rotate(40deg);
+  transform: rotate(45deg);
   margin-left: 30px;
+  box-shadow: inset 0px 0px 10px rgba(255, 255, 255, 0.9);
+  display: flex;
+  justify-content: center;
 }
-.about .container .pic img {
-  transform: rotate(-40deg);
-  height: 500px;
+.about .container .pic .inner {
+  width: 220px;
+  height: 200px;
+  text-align: center;
+}
+.about .container .pic .inner img {
+  transform: rotate(-45deg);
 }
 .about .container .personal-info {
   width: 50%;
