--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,11 @@ table {
   border-spacing: 0;
 }
 
+.section {
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+}
+
 @font-face {
   font-family: bold;
   src: url(/fonts/Akrobat-ExtraBold.ttf);
@@ -563,10 +568,10 @@ header ul li a:hover {
   width: 400px;
   height: 400px;
   padding: 30px;
-  border: 10px double red;
+  border: 10px double #0e0c388e;
   transform: rotate(45deg);
   margin-left: 30px;
-  box-shadow: inset 0px 0px 10px rgba(255, 255, 255, 0.9);
+  box-shadow: inset 0px 0px 10px #0e0c388e;
   display: flex;
   justify-content: center;
 }
@@ -594,16 +599,28 @@ header ul li a:hover {
   color: #fff;
 }
 
-.skill-experience h2 {
+.skills {
+  padding-top: 50px;
+}
+.skills .container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border-radius: 20px;
+  padding: 40px;
+}
+.skills h2 {
   font-family: "semi";
   font-size: 40px;
   text-align: center;
   position: relative;
   text-transform: capitalize;
-  padding-top: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.skill-experience h2 span {
-  font-size: 80px;
+.skills h2 span {
+  font-size: 70px;
   font-weight: bolder;
   font-family: "bold";
   text-transform: uppercase;
@@ -612,7 +629,55 @@ header ul li a:hover {
   color: #0e0c388e;
   left: 0;
   right: 0;
-  top: 50px;
+  top: 0px;
   margin-left: auto;
   margin-right: auto;
+}
+.skills__name i {
+  margin-right: 20px;
+}
+.skills__data {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  width: 40%;
+  background-color: #fff;
+  color: #4070F4;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0px 4px 25px rgba(207, 207, 207, 0.15);
+  margin-bottom: 10px;
+}
+.skills__bar {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: #4070F4;
+  height: 0.25rem;
+  border-radius: 0.5rem;
+}
+.skills__html {
+  width: 95%;
+}
+.skills__css {
+  width: 85%;
+}
+.skills__sass {
+  width: 80%;
+}
+.skills__js {
+  width: 65%;
+}
+.skills__react {
+  width: 60%;
+}
+.skills__wordpress {
+  width: 65%;
+}
+.skills__divi {
+  width: 65%;
+}
+.skills__ux {
+  width: 85%;
 }/*# sourceMappingURL=style.css.map */
