--- a/css/_skills.scss
+++ b/css/_skills.scss
@@ -1,55 +1,46 @@
-
 .skills{
-    padding-top: 50px;
+
   .container{
-    display: flex;flex-wrap: wrap;justify-content: space-between;border-radius: 20px;
-      padding: 40px;
-  }
     h2{
-                font-family: 'semi';font-size: 40px;text-align: center;position: relative;text-transform: capitalize;@include center;
-                span{
-                    font-size: 70px;font-weight: bolder;font-family: 'bold';text-transform: uppercase;position: absolute;z-index: -2;color:  #0e0c388e;
-                    left: 0; right: 0; top: 0px; margin-left: auto; margin-right: auto; 
-             }
+      font-family: 'semi';padding: 30px  0 0 0;
+      }
+      p{
+        font-size: 20px;font-family: 'light';padding-bottom: 20px;width: 60%;
+      }
+
+      .row{
+        .col-md-4{
+          .tab{
+            display: flex;flex-direction: column;background-color: aqua;font-size: 30px;padding-top: 50px;
+            button{
+              font-family: 'semi';text-transform: uppercase;
+            }
           }
-          &__name{
-              i{margin-right: 20px;}
+        }
+
+        .col-md-8{
+          .content{
+            border-left: 1px outset red;height: 400px;background-color: aquamarine;padding: 30px 40px 0 40px;
+            .city{
+              .skill{
+                background-color: red;margin-bottom: 20px;
+                .bar{
+                  background-color: green;display: flex;justify-content: end;padding-right: 30px;
+                }
+              }
+            }
           }
-    &__data{
-        display: flex; justify-content: space-between;align-items: center;position: relative;width: 40%;background-color: #fff
-        ;color: #4070F4;
-        padding: .5rem 1rem;border-radius: .5rem; box-shadow: 0px 4px 25px rgba(207, 207, 207, 0.15);margin-bottom: 10px;
-    }
-  
-    &__bar{
-        position: absolute;left: 0; bottom: 0;background-color:#4070F4;height: .25rem; border-radius: .5rem;
-    }
+        }
+      }
+  }
 
-
-    &__html{
-        width: 95%;
-    }
-    &__css{
-        width: 85%;
-    }
-    &__sass{
-        width: 80%;
-    }
-    &__js{
-        width: 65%;
-    }
-    &__react{
-        width: 60%;
-    }
-
-    &__wordpress{
-        width: 65%;
-    }
-    &__divi{
-        width: 65%;
-    }
-    &__ux{
-        width: 85%;
-    }
- 
 }
+
+
+
+
+
+
+
+  
+  
