--- a/css/_about.scss
+++ b/css/_about.scss
@@ -1,38 +1,145 @@
 .about{
     padding-bottom: 50px;
+    button{@include btn;width: 200px;}
     h2{
-       font-family: 'semi';font-size: 40px;padding: 50px;text-align: center;position: relative;
-       span{
-           font-size: 130px;font-weight: bolder;font-family: 'bold';text-transform: uppercase;position: absolute;z-index: -2;color:  #0e0c388e;
-           left: 0; right: 0; top: 0px; margin-left: auto; margin-right: auto;    
-     }
+       font-family: 'semi';font-size: 50px;padding: 10px;text-align: center;position: relative;margin-bottom: 30px;
+           
      #about{
         background-color: #FF0513;height: 2px;border: none;width: 20%;margin: 0 auto;
     }
     }
-    
+    h2::first-letter {
+        color: #FF0513;
+        font-size: 90px;
+    }
   .container{
-      display: flex;justify-content: space-between;
+      display: flex;justify-content: space-between;flex-wrap: wrap;
     .pic{
-        width: 400px;height: 400px;padding: 30px;border: 10px double  #0e0c388e;transform: rotate(45deg);margin-left: 30px;
-        box-shadow: inset 0px 0px 10px   #0e0c388e;;display: flex;justify-content: center;
-       .inner{
-           width: 220px;height: 200px;text-align: center;
-        img{
-            transform: rotate(-45deg)
+        width: 250px;height: 300px;border: 10px outset  #FF0513;position: relative;margin: 0 auto;
+        border-radius: 100px 0 80px 0;@include center;margin-bottom: 30px;
+        .inner{
+            width: 180px;height: auto;@include center;
         }
-       }
+     
     }
     .personal-info{
-        width: 50%;
+        width: 100%;text-align: center;padding: 0 10px 0 10px;
         p{
-            font-family: 'light';font-size: 25px;padding-bottom: 40px;
+            font-family: 'light';font-size: 20px;padding-bottom: 10px;
         }
-        .social{
-            a{
-                font-size: 20px;font-family: 'light';padding: 20px;text-transform: capitalize;color: #fff;
-            }
-        }
+    
     }
   }
 }
+
+
+
+
+@media (min-width: 576px) {  
+
+
+}
+
+/* Ipad */
+@media (min-width: 768px) {  
+	
+    .about{
+        padding-bottom: 50px;
+    
+      .container{
+          padding-left: 50px;
+     
+        .personal-info{
+            width: 100%;padding-top: 20px;
+           
+        }
+      }
+     }
+    }
+    
+
+
+@media (min-width: 992px) { 
+   
+    .about{
+        padding-bottom: 50px;
+      
+        
+      .container{
+          
+        .pic{
+            width: 330px;height: 380px;border: 10px outset  #FF0513;position: relative;margin: 0 auto;
+            border-radius: 100px 0 80px 0;@include center;margin-bottom: 30px;
+            .inner{
+                width: 240px;height: auto;@include center;
+            }
+         
+        }
+        .personal-info{
+            width: 60%;text-align: left;
+            p{
+                font-family: 'light';font-size: 25px;padding-bottom: 10px;
+            }
+        }
+      }
+    }
+  
+    
+}
+
+/* Desktop */
+@media (min-width: 1200px) {  
+   
+    .about{
+        padding-bottom: 50px;
+      
+        
+      .container{
+          
+     
+        .personal-info{
+            width: 60%;text-align: left;
+            p{
+                font-size: 25px;padding-bottom: 20px;
+            }
+        }
+      }
+    }
+    
+}
+
+
+
+
+/* Set width to make card deck cards 100% width */
+@media (max-width: 950px) { 
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
