--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@ table {
   padding-bottom: 2rem;
 }
 
+* h2 {
+  font-size: 50px;
+}
+
 @font-face {
   font-family: bold;
   src: url(/fonts/Akrobat-ExtraBold.ttf);
@@ -532,26 +536,32 @@ header ul li a:hover {
 .about {
   padding-bottom: 50px;
 }
+.about button {
+  width: 150px;
+  font-size: 25px;
+  text-transform: uppercase;
+  border-radius: 40px 0 40px 0px;
+  font-family: "bold";
+  outline: none;
+  border: none;
+  color: #ffffff;
+  background-color: #FF0513;
+  width: 200px;
+}
+.about button:hover {
+  background-color: #0E0C38;
+  color: #fff;
+  border: 2px solid #fff;
+  outline: none;
+  box-shadow: 2px 4px 5px #fff;
+}
 .about h2 {
   font-family: "semi";
-  font-size: 40px;
-  padding: 50px;
+  font-size: 50px;
+  padding: 10px;
   text-align: center;
   position: relative;
-}
-.about h2 span {
-  font-size: 130px;
-  font-weight: bolder;
-  font-family: "bold";
-  text-transform: uppercase;
-  position: absolute;
-  z-index: -2;
-  color: #0e0c388e;
-  left: 0;
-  right: 0;
-  top: 0px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-bottom: 30px;
 }
 .about h2 #about {
   background-color: #FF0513;
@@ -560,124 +570,140 @@ header ul li a:hover {
   width: 20%;
   margin: 0 auto;
 }
+.about h2::first-letter {
+  color: #FF0513;
+  font-size: 90px;
+}
 .about .container {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .about .container .pic {
-  width: 400px;
-  height: 400px;
-  padding: 30px;
-  border: 10px double #0e0c388e;
-  transform: rotate(45deg);
-  margin-left: 30px;
-  box-shadow: inset 0px 0px 10px #0e0c388e;
+  width: 250px;
+  height: 300px;
+  border: 10px outset #FF0513;
+  position: relative;
+  margin: 0 auto;
+  border-radius: 100px 0 80px 0;
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
 }
 .about .container .pic .inner {
-  width: 220px;
-  height: 200px;
-  text-align: center;
-}
-.about .container .pic .inner img {
-  transform: rotate(-45deg);
+  width: 180px;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .about .container .personal-info {
-  width: 50%;
+  width: 100%;
+  text-align: center;
+  padding: 0 10px 0 10px;
 }
 .about .container .personal-info p {
   font-family: "light";
-  font-size: 25px;
-  padding-bottom: 40px;
-}
-.about .container .personal-info .social a {
   font-size: 20px;
-  font-family: "light";
-  padding: 20px;
-  text-transform: capitalize;
-  color: #fff;
+  padding-bottom: 10px;
 }
 
-.skills {
-  padding-top: 50px;
+/* Ipad */
+@media (min-width: 768px) {
+  .about {
+    padding-bottom: 50px;
+  }
+  .about .container {
+    padding-left: 50px;
+  }
+  .about .container .personal-info {
+    width: 100%;
+    padding-top: 20px;
+  }
 }
-.skills .container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  border-radius: 20px;
-  padding: 40px;
+@media (min-width: 992px) {
+  .about {
+    padding-bottom: 50px;
+  }
+  .about .container .pic {
+    width: 330px;
+    height: 380px;
+    border: 10px outset #FF0513;
+    position: relative;
+    margin: 0 auto;
+    border-radius: 100px 0 80px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+  .about .container .pic .inner {
+    width: 240px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .about .container .personal-info {
+    width: 60%;
+    text-align: left;
+  }
+  .about .container .personal-info p {
+    font-family: "light";
+    font-size: 25px;
+    padding-bottom: 10px;
+  }
 }
-.skills h2 {
+/* Desktop */
+@media (min-width: 1200px) {
+  .about {
+    padding-bottom: 50px;
+  }
+  .about .container .personal-info {
+    width: 60%;
+    text-align: left;
+  }
+  .about .container .personal-info p {
+    font-size: 25px;
+    padding-bottom: 20px;
+  }
+}
+/* Set width to make card deck cards 100% width */
+.skills .container h2 {
   font-family: "semi";
-  font-size: 40px;
-  text-align: center;
-  position: relative;
-  text-transform: capitalize;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 30px 0 0 0;
 }
-.skills h2 span {
-  font-size: 70px;
-  font-weight: bolder;
-  font-family: "bold";
-  text-transform: uppercase;
-  position: absolute;
-  z-index: -2;
-  color: #0e0c388e;
-  left: 0;
-  right: 0;
-  top: 0px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.skills__name i {
-  margin-right: 20px;
-}
-.skills__data {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-  width: 40%;
-  background-color: #fff;
-  color: #4070F4;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  box-shadow: 0px 4px 25px rgba(207, 207, 207, 0.15);
-  margin-bottom: 10px;
-}
-.skills__bar {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background-color: #4070F4;
-  height: 0.25rem;
-  border-radius: 0.5rem;
-}
-.skills__html {
-  width: 95%;
-}
-.skills__css {
-  width: 85%;
-}
-.skills__sass {
-  width: 80%;
-}
-.skills__js {
-  width: 65%;
-}
-.skills__react {
+.skills .container p {
+  font-size: 20px;
+  font-family: "light";
+  padding-bottom: 20px;
   width: 60%;
 }
-.skills__wordpress {
-  width: 65%;
+.skills .container .row .col-md-4 .tab {
+  display: flex;
+  flex-direction: column;
+  background-color: aqua;
+  font-size: 30px;
+  padding-top: 50px;
 }
-.skills__divi {
-  width: 65%;
+.skills .container .row .col-md-4 .tab button {
+  font-family: "semi";
+  text-transform: uppercase;
 }
-.skills__ux {
-  width: 85%;
+.skills .container .row .col-md-8 .content {
+  border-left: 1px outset red;
+  height: 400px;
+  background-color: aquamarine;
+  padding: 30px 40px 0 40px;
+}
+.skills .container .row .col-md-8 .content .city .skill {
+  background-color: red;
+  margin-bottom: 20px;
+}
+.skills .container .row .col-md-8 .content .city .skill .bar {
+  background-color: green;
+  display: flex;
+  justify-content: end;
+  padding-right: 30px;
 }/*# sourceMappingURL=style.css.map */
