--- a/css/_banner.scss
+++ b/css/_banner.scss
@@ -1,5 +1,6 @@
 .banner{
-    height: 90vh;@include center;background-image: linear-gradient( #040221,#0E0C38 );
+    height: 90vh;@include center;
+    // background-image: linear-gradient( #040221,#0E0C38 );
     .container{
         display: flex;justify-content: center;flex-wrap: wrap;
         // NAME
@@ -27,13 +28,13 @@
         .image{
             width: 38%;position: relative;;
          .overlay{
-            position: absolute;top: 0;left: 0;background-image: linear-gradient( #040221,#0E0C38 );width: 100%;height: 100%;opacity: .5;;
+            position: absolute;top: 0;left: 0;background-color: #040221;width: 100%;height: 100%;opacity: .5;;
          }
         }
 
         // FOLLOW
         .follow{
-            width: 20%;height: 60vh;display: flex;flex-direction: column;justify-content: center; box-shadow: 12px 12px rgb(255 255 255 / 12%);margin-left: 2px;
+            width: 20%;height: 60vh;display: flex;flex-direction: column;justify-content: center; box-shadow: 12px 12px #322ad1;;margin-left: 2px;
             padding: 30px 0 30px  40px ;border-radius:  0px 100px 0px 100px;background-color: #040221;margin-top: 40px;
             h4{
                 font-size: 20px;text-transform: capitalize;font-family: 'bold';padding-bottom: 40px;writing-mode: vertical-lr;text-orientation: upright;
@@ -42,7 +43,7 @@
             a{
                 color: white;text-decoration: none;font-family: 'light';padding-bottom: 15px;font-size: 25px;text-transform: capitalize;
                 &:hover{
-                    text-decoration: underline;font-family: 'semi';
+                    text-decoration: underline;font-family: 'semi';text-decoration-color:#322ad1;;
                 }
                 i{margin-right: 15px;}
             }
