--- a/css/_banner.scss
+++ b/css/_banner.scss
@@ -13,6 +13,10 @@
                 font-size: 40px;font-family: 'semi';text-transform: capitalize;
                 span{display: block;padding-left: 10px;}
             }
+            h2::first-letter {
+                color: #322ad1;
+                font-size: 90px;
+            }
             h1{
                 font-size: 20px;text-transform: capitalize;padding: 35px 0 35px 0;font-family: 'light';
                 strong{
@@ -43,7 +47,7 @@
             a{
                 color: white;text-decoration: none;font-family: 'light';padding-bottom: 15px;font-size: 25px;text-transform: capitalize;
                 &:hover{
-                    text-decoration: underline;font-family: 'semi';text-decoration-color:#322ad1;;
+                    text-decoration: underline;font-family: 'semi';text-decoration-color:#322ad1;
                 }
                 i{margin-right: 15px;}
             }
@@ -197,7 +201,7 @@
 @media screen and(max-width:375px) {
     .nav{visibility: hidden;}
       .banner{
-          height: 125vh;padding-top: 0px;color: green;
+          height: 125vh;padding-top: 0px;
           .container{
           
               // NAME
