--- a/css/_skills.scss
+++ b/css/_skills.scss
@@ -2,7 +2,7 @@
   padding: 20px 0 50px 0;
   .container{
     h2{
-      font-family: 'semi';padding: 30px  0 0 0;
+      font-family: 'semi';padding: 30px  0 0 0;;
       }
       h2::first-letter {
         color: #322ad1;
