--- a/css/_projects.scss
+++ b/css/_projects.scss
@@ -16,9 +16,9 @@
             .overlay{
                         height: 30%;padding-left: 15px;background-color: #040221;
                 h3{
-                    font-family: 'semi';color: #fff;font-size: 30px;text-transform: capitalize;
+                    font-family: 'semi';color: #fff;font-size: 25px;text-transform: capitalize;
                     span{
-                        font-family: 20px;color: wheat;font-size: 20px;
+                        font-family: 20px;color: #322ad1;font-size: 20px;padding-right: 20px;
                     }
                 }
                 a{
