--- a/css/style.css
+++ b/css/style.css
@@ -65,15 +65,15 @@ table {
 }
 
 @font-face {
-  font-family: bold;
+  font-family: "bold";
   src: url(/fonts/Akrobat-ExtraBold.ttf);
 }
 @font-face {
-  font-family: light;
+  font-family: "light";
   src: url(/fonts/Akrobat-ExtraLight.ttf);
 }
 @font-face {
-  font-family: semi;
+  font-family: "semi";
   src: url(/fonts/Akrobat-SemiBold.ttf);
 }
 header {
@@ -862,13 +862,14 @@ footer p {
 .projects .container .project .overlay h3 {
   font-family: "semi";
   color: #fff;
-  font-size: 30px;
+  font-size: 25px;
   text-transform: capitalize;
 }
 .projects .container .project .overlay h3 span {
   font-family: 20px;
-  color: wheat;
+  color: #322ad1;
   font-size: 20px;
+  padding-right: 20px;
 }
 .projects .container .project .overlay a {
   font-family: "semi";
