--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -42,6 +42,15 @@ footer{
             }
         }
     }
+    .social{
+       padding: 20px 0 20px 0;
+        a{
+            margin: 10px;
+            i{
+                font-size: 25px;
+            }
+        }
+    }
     p{
         font-family: 'light';font-size: 16px;text-align: center;padding-top: 60px;
     }
@@ -53,5 +62,14 @@ footer{
  @media screen and (min-width:768px) {
      .contact{
         padding-left: 120px;
+     }
+     .social{
+         display: flex;flex-wrap: wrap;
+         a{
+             margin: 20px;
+             i{
+                 font-size: 40px;
+             }
+         }
      }
  }
